// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when  is  1`] = `
Object {
  "background": "$theme.colors.white",
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": "none",
  "flexDirection": "column",
  "height": null,
  "listStyle": "none",
  "margin": 0,
  "overflowY": null,
  "padding": "$theme.sizing.scale600",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale200",
  "position": "absolute",
  "top": null,
  "width": "96%",
}
`;

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when $isOpen is true 1`] = `
Object {
  "background": "$theme.colors.white",
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": null,
  "flexDirection": "column",
  "height": null,
  "listStyle": "none",
  "margin": 0,
  "overflowY": null,
  "padding": "$theme.sizing.scale600",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale200",
  "position": "absolute",
  "top": null,
  "width": "96%",
}
`;

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when $rows is 3 1`] = `
Object {
  "background": "$theme.colors.white",
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": "none",
  "flexDirection": "column",
  "height": "NaNpx",
  "listStyle": "none",
  "margin": 0,
  "overflowY": "scroll",
  "padding": "$theme.sizing.scale600",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale200",
  "position": "absolute",
  "top": null,
  "width": "96%",
}
`;

exports[`Select styled components StyledDropDown : StyledDropDown has correct styles when $type is SELECT 1`] = `
Object {
  "background": "$theme.colors.white",
  "borderRadius": "$theme.sizing.scale300",
  "boxShadow": "$theme.lighting.shadow600",
  "display": "none",
  "flexDirection": "column",
  "height": null,
  "listStyle": "none",
  "margin": 0,
  "overflowY": null,
  "padding": "$theme.sizing.scale600",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale400",
  "paddingRight": "$theme.sizing.scale400",
  "paddingTop": "$theme.sizing.scale200",
  "position": "absolute",
  "top": "$theme.sizing.scale1000",
  "width": "96%",
}
`;

exports[`Select styled components StyledDropDownItem DropDownItem: StyledDropDownItem has correct styles 1`] = `
Object {
  ":hover": Object {
    "color": "$theme.colors.primary400",
  },
  "color": "$theme.colors.black",
  "cursor": "pointer",
  "display": "block",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.sizing.scale600",
  "margin": 0,
  "position": "relative",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "color",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
}
`;

exports[`Select styled components StyledInput Input: StyledInput has correct styles 1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.mono700",
  },
  ":hover": Object {
    "cursor": "pointer",
  },
  "backgroundColor": "transparent",
  "borderStyle": "none",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.mono1000",
  "cursor": "pointer",
  "flexGrow": "1",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale400",
  "width": "auto",
}
`;

exports[`Select styled components StyledInputContainer InputContainer: StyledInputContainer has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "white",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": undefined,
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "flexWrap": "wrap",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "padding": "5px",
  "position": "relative",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Select styled components StyledOption : StyledOption has correct styles when  1`] = `
Object {
  ":hover": Object {
    "cursor": "text",
  },
  "color": null,
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "18px",
  "paddingRight": "18px",
  "paddingTop": "$theme.sizing.scale300",
}
`;

exports[`Select styled components StyledOption : StyledOption has correct styles when $selected 1`] = `
Object {
  ":hover": Object {
    "cursor": "text",
  },
  "color": "$theme.colors.primary400",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "0px",
  "paddingRight": "0px",
  "paddingTop": "$theme.sizing.scale300",
}
`;

exports[`Select styled components StyledOption : StyledOption has correct styles when disabled 1`] = `
Object {
  ":hover": Object {
    "cursor": "not-allowed",
  },
  "color": "$theme.colors.mono700",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "18px",
  "paddingRight": "18px",
  "paddingTop": "$theme.sizing.scale300",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is CLEAR_ALL 1`] = `
Object {
  "marginLeft": "auto",
  "position": "absolute",
  "right": "$theme.sizing.scale400",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is CLEAR_TAG 1`] = `Object {}`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is LOOP 1`] = `Object {}`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is SELECT 1`] = `
Object {
  "marginRight": "$theme.sizing.scale500",
}
`;

exports[`Select styled components StyledSearchIcon : StyledSearchIcon has correct styles when type is SELECTED 1`] = `
Object {
  "paddingRight": "$theme.sizing.scale300",
}
`;

exports[`Select styled components StyledTag : StyledTag has correct styles when  1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.mono600",
  },
  ":hover": Object {
    "cursor": "pointer",
  },
  "backgroundColor": "transparent",
  "borderStyle": "none",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.mono600",
  "cursor": "pointer",
  "flexGrow": "1",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale400",
  "width": "auto",
}
`;

exports[`Select styled components StyledTag : StyledTag has correct styles when $multiple 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono400",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "7px",
  "borderWidth": "1px",
  "color": "$theme.colors.primary400",
  "display": "flex",
  "fontWeight": "bold",
  "lineHeight": "$theme.sizing.scale800",
  "margin": "5px",
  "padding": "5px",
}
`;
